<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <ImageView
                android:id="@+id/receipt_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@android:color/darker_gray"
                android:cropToPadding="true"
                android:scaleType="centerInside" />

                <ImageButton
                    android:id="@+id/receipt_camera"
                    android:layout_width="match_parent"
                    android:layout_height="74dp"
                    android:src="@android:drawable/ic_menu_camera" />
            </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/receipt_title_label" />

        <EditText
            android:id="@+id/receipt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/receipt_title_hint" />

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/receipt_shop_label" />

        <EditText
            android:id="@+id/receipt_shop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/receipt_shop_hint" />
    </LinearLayout>
    </LinearLayout>


    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/receipt_description_label" />

    <EditText
        android:id="@+id/receipt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/receipt_description_hint" />

    <Button
        android:id="@+id/receipt_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/latitude_title_text" />

    <EditText
        android:id="@+id/latitude_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="false" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/longitude_title_text" />

    <EditText
        android:id="@+id/longitude_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="false" />

    <Button
        android:id="@+id/receipt_gps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gps_button_text"/>

    <Button
        android:id="@+id/receipt_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/receipt_report_text" />

</LinearLayout>